--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ENV_SILENT=true node build/server.js",
     "dev": "node ace serve --watch",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:clear": "./scripts/clear-db.sh"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.0.0",
