--- a/package.json
+++ b/package.json
@@ -5,35 +5,49 @@
   "scripts": {
     "build": "node ace build --production",
     "start": "ENV_SILENT=true node build/server.js",
+    "start:dev": "ts-node-dev ace serve --watch --node-args=--inspect=0.0.0.0:9229",
     "dev": "node ace serve --watch",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
-    "db:clear": "./scripts/clear-db.sh"
+    "db:clear": "./scripts/clear-db.sh",
+    "list-routes": "./scripts/list-route.sh"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^5.0.0",
+    "@adonisjs/assembler": "^5.3.9",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^7.31.0",
+    "chai": "^4.3.4",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-adonis": "^1.3.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "pino-pretty": "^5.1.2",
-    "prettier": "^2.3.2",
-    "typescript": "~4.2",
-    "youch": "^2.2.2",
-    "youch-terminal": "^1.1.1"
+    "eslint-plugin-adonis": "^2.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "esm": "^3.2.25",
+    "faker-br": "^0.4.1",
+    "mocha-steps": "^1.3.0",
+    "pino-pretty": "^7.3.0",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "~4.5",
+    "youch": "^3.0.0",
+    "youch-terminal": "^2.0.0"
   },
   "dependencies": {
-    "@adonisjs/auth": "^8.0.7",
-    "@adonisjs/core": "^5.1.0",
-    "@adonisjs/lucid": "^15.0.3",
-    "@adonisjs/repl": "^3.0.0",
-    "luxon": "^2.0.1",
+    "@adonisjs/auth": "^8.0.10",
+    "@adonisjs/core": "^5.4.2",
+    "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/repl": "^3.1.7",
+    "axios": "^0.24.0",
+    "luxon": "^2.2.0",
+    "mocha": "^9.1.3",
     "mysql": "^2.18.1",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.21"
   }
 }
