--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_KEY=B6Y-J7R49DLBwPWSu4VRQtHWM7dxPR7u
 
 DB_VOLUME=""
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=CAECOMP-database
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=123456
