--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,9 @@ services:
         condition: service_healthy
     ports:
       - "3333:3333"
+      - "9237:9229"
     volumes:
-      - ./src:/usr/src/app/src
+      - .:/usr/src
     links:
       - "database:database"
     expose:
@@ -34,12 +35,12 @@ services:
     ports:
       - '3306:3306'
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:?err}
       MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - database:/var/lib/mysql
     healthcheck:
-        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-ppassword", "-uuser"]
+        test: mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD
         interval: 10s
         timeout: 20s
         retries: 10
