--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: dockerfile
     container_name: caecomp-backend-app
-    working_dir: /usr/src/app
+    working_dir: /usr/src
     env_file:
       - .env
     depends_on:
