schedule fixes + tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "build"
   ],
   "compilerOptions": {
+    "noUnusedLocals": false,
     "module": "CommonJS",
     "baseUrl": "src",
     "target": "ES2021",
